--- a/work/Track_particle.in
+++ b/work/Track_particle.in
@@ -117,41 +117,41 @@ LSPCH=t
  Nue(1)=0,	MaxE(1)=-0.0
 
 
- File_Efield(2)='DC-3D_liu4',  C_pos(2)=4.692, C_higher_order(2) = f
+ File_Efield(2)='E_z(z).dat',  C_pos(2)=4.692, C_higher_order(2) = f
  
  Nue(2)=0,	MaxE(2)=-0.0
 
 
- File_Efield(3)='DC-3D_liu4',  C_pos(3)=6.076, C_higher_order(3) = f
+ File_Efield(3)='E_z(z).dat',  C_pos(3)=6.076, C_higher_order(3) = f
  
  Nue(3)=0,	MaxE(3)=-0.0
 
- File_Efield(4)='DC-3D_liu4',  C_pos(4)=7.456, C_higher_order(4) = f
+ File_Efield(4)='E_z(z).dat',  C_pos(4)=7.456, C_higher_order(4) = f
  
  Nue(4)=0,	MaxE(4)=-0.9
 
 
- File_Efield(5)='DC-3D_liu4',  C_pos(5)=8.838, C_higher_order(5) = f
+ File_Efield(5)='E_z(z).dat',  C_pos(5)=8.838, C_higher_order(5) = f
  
  Nue(5)=0,	MaxE(5)=-0.9
 
 
- File_Efield(6)='DC-3D_liu4',  C_pos(6)=10.220, C_higher_order(6) = f
+ File_Efield(6)='E_z(z).dat',  C_pos(6)=10.220, C_higher_order(6) = f
  
  Nue(6)=0,	MaxE(6)=-0.9
 
 
- File_Efield(7)='DC-3D_liu4',  C_pos(7)=11.602, C_higher_order(7) = f
+ File_Efield(7)='E_z(z).dat',  C_pos(7)=11.602, C_higher_order(7) = f
  
  Nue(7)=0,	MaxE(7)=-0.9
 
 
- File_Efield(8)='DC-3D_liu4',  C_pos(8)=12.984, C_higher_order(8) = f
+ File_Efield(8)='E_z(z).dat',  C_pos(8)=12.984, C_higher_order(8) = f
  
  Nue(8)=0,	MaxE(8)=-0.9
 
 
-File_Efield(9)='DC-3D_liu4',  C_pos(9)=14.366, C_higher_order(9) = f
+File_Efield(9)='E_z(z).dat',  C_pos(9)=14.366, C_higher_order(9) = f
  
  Nue(9)=0,	MaxE(9)=-0.9
 
